# TreeFlow

./: README.md  animate_time_evolution.py  dataset.py  debug_profiling.py  evaluate.py  evaluate_v2.py  evaluate_v3.py  figures.py  generate_samples.py  model.py  model_autoencoder.py  postprocess_samples.py  preprocess_laz.py  preprocess_laz_to_npy.py  pyproject.toml  sample.py  stem_tracker.py  submit_animate_time_evolution.sh  submit_debug.sh  submit_evaluate_16384.sh  submit_evaluate_4096.sh  submit_figure_cfg_sensitivity.sh  submit_figure_qualitative.sh  submit_finetune_transformer_8_512_16384.sh  submit_generate_samples.sh  submit_generate_samples_16384.sh  submit_generate_samples_4096.sh  submit_postprocess_16384.sh  submit_postprocess_4096.sh  submit_preprocess.sh  submit_preprocess_16384.sh  submit_preprocess_4096.sh  submit_preprocess_8192.sh  submit_preprocess_full.sh  submit_preprocess_laz.sh  submit_preprocess_laz_to_npy.sh  submit_preprocess_laz_to_npy_16384.sh  submit_preprocess_laz_to_npy_4096.sh  submit_pretrain_transformer_8_256_4096.sh  submit_pretrain_transformer_8_256_8192.sh  (+24 more)
figures/: architecture_overall.tex  architecture_transformer_block.tex  figure_1.json  figure_crown_mae.json  figure_hcb.json  figure_height_interpolation.json  figure_hjsd.json  figure_stem_tracker.json  figure_time_evolution.json
models/: __init__.py  dit.py  pointnext.py  transformer.py
